[tool.poetry]
name = "maze-solver"
version = "0.1.0"
description = "An automated maze solver made in python"
authors = ["glitchdawg <shivavayuputra8512@GMail.com>"]
readme = "README.md"
packages = [{include = "maze_solver"}]

[tool.poetry.dependencies]
python = "^3.10"
tk = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
